@@ -2,7 +2,7 @@ package make;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -31,20 +31,20 @@ public class ParseTestCase {
 		
 		try {
 			
-			Source source = new Source(new URL("file:download//index.html"));
+			Source source = new Source(URI.create("file:download//index.html").toURL());
 
 			Element temp = source.getFirstElement(HTMLElementName.TITLE);
 			Pattern p = Pattern.compile("[A-Z]\\d{3}");
 			Matcher m = p.matcher(temp.toString());
 			if (m.find()) {
-//				System.out.println(m.group());
+				// System.out.println(m.group());
 				title = m.group();
 			}
 			
 			List<Element> titleList = source.getAllElements(HTMLElementName.CODE);
 			for (Element e : titleList) {
-				System.out.println(e.getContent().toString());
-				System.out.println("-------------------------------------");
+				// System.out.println(e.getContent().toString());
+				// System.out.println("-------------------------------------");
 				testCaseList.add(e.getContent().toString());
 			}
 			
